--- a/app/src/main/res/layout/activity_simple_use.xml
+++ b/app/src/main/res/layout/activity_simple_use.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_simple_use"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.project.rxjavaproject.MainActivity">
-
+    android:paddingTop="@dimen/activity_vertical_margin">
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="观察者模式的实现" />
+        android:text="rxJava之create使用"
+        android:layout_height="wrap_content" />
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="rxJava的简单实用" />
+        android:text="rxJava之just使用"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:text="rxJava之from使用"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
+
+
+
