--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="rxJava的简单实用" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="rxJava的线程控制" />
 </LinearLayout>
