--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_simple_use"
+    android:id="@+id/activity_schedule"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.project.rxjavaproject.schedule.ScheduleActivity">
+
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
-        android:text="rxJava之create使用"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:text="rxJava之just使用"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:text="rxJava之fromArray使用"
+        android:text="schedulers"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/tv_data"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
-
-
-
