--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="rxJava的线程控制" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="通过rxJava实现验证码发送" />
 </LinearLayout>
